welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "A"){
             ^BDRBuggle:7: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "B"){
             ^BDRBuggle:11: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "R"){
             ^BDRBuggle:15: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "L"){
             ^BDRBuggle:19: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "I"){
             ^BDRBuggle:24: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "C"){
             ^BDRBuggle:29: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "Z"){
             ^BDRBuggle:32: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "Y"){
             ^BDRBuggle:36: error: type mismatch;
 found   : Unit
 required: Boolean
	if(x = "Z"){
             ^